RESOLVED FIXED93366
Web Inspector: cached images memory instrumentation regression after r124744
https://bugs.webkit.org/show_bug.cgi?id=93366
Summary Web Inspector: cached images memory instrumentation regression after r124744
Yury Semikhatsky
Reported 2012-08-07 07:20:26 PDT
1. Open attached page. 2. Go to profiles panel and look at the cached resources section. It should be something about 16Mb but it is less than 1Mb.
Attachments
Sample resource (46.00 KB, image/jpeg)
2012-08-07 08:28 PDT, Yury Semikhatsky
no flags
Patch (45.67 KB, patch)
2012-08-07 22:52 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2012-08-07 08:28:18 PDT
Created attachment 156945 [details] Sample resource
Yury Semikhatsky
Comment 2 2012-08-07 22:52:01 PDT
WebKit Review Bot
Comment 3 2012-08-08 02:16:48 PDT
Comment on attachment 157122 [details] Patch Clearing flags on attachment: 157122 Committed r125011: <http://trac.webkit.org/changeset/125011>
WebKit Review Bot
Comment 4 2012-08-08 02:16:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.