Web Inspector: cached images memory instrumentation regression after r124744 https://bugs.webkit.org/show_bug.cgi?id=93366

Reviewed by Vsevolod Vlasov.

Source/WebCore:

CachedImage memory usage data no includes size of both encoded and
decoded data.

Test: inspector/profiler/memory-instrumentation-cached-images.html

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::reportMemoryUsage):

LayoutTests:

Added a sanity test checking that memory usage data includes decoded image size.

* inspector/profiler/memory-instrumentation-cached-images-expected.txt: Added.
* inspector/profiler/memory-instrumentation-cached-images.html: Added.


Canonical link: https://commits.webkit.org/111319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125011 268f45cc-cd09-0410-ab3c-d52691b4dbfc